restante de paginas

--- a/ul.html
+++ b/ul.html
@@ -34,10 +34,10 @@
 
     <!-- main -->
     <main>
-        <h1> Lista Ordenada </h1>
-        <p> Uma lista ordenada começa com a tag &lt;ol&gt; Cada item da lista começa com a tag &lt;li&gt; </p>
-        <p> Os itens da lista serão marcados com números por padrão: </p> 
-        <img src="imagem/ol.png" alt="imagem mostrando como criar uma lista ordenada com as tags 'ol' e 'li'"> 
+        <h1> Lista Não Ordenada </h1>
+        <p> Uma lista não ordenada começa com a tag &lt;ul&gt; Cada item da lista começa com a tag &lt;li&gt; </p>
+        <p> Os itens da lista serão marcados com marcadores (pequenos círculos pretos) por padrão: </p> 
+        <img src="imagem/ul.png" alt="imagem mostrando como criar uma lista não ordenada com as tags 'ul' e 'li'"> 
 
     </main>
 
