--- a/layout.html
+++ b/layout.html
@@ -34,10 +34,18 @@
 
     <!-- main -->
     <main>
-        <h1> Lista Ordenada </h1>
-        <p> Uma lista ordenada começa com a tag &lt;ol&gt; Cada item da lista começa com a tag &lt;li&gt; </p>
-        <p> Os itens da lista serão marcados com números por padrão: </p> 
-        <img src="imagem/ol.png" alt="imagem mostrando como criar uma lista ordenada com as tags 'ol' e 'li'"> 
+        <h1> Layout </h1>
+        <p> O layout é construido através de elementos semanticos, sendo eles: </p>
+        <ul>
+            <li> &lt;header&gt; - Define o cabeçalho da pagina </li>
+            <li> &lt;nav&gt; - Define o menu de navegação da pagina </li>
+            <li> &lt;section&gt; - Define uma seção na pagina </li>
+            <li> &lt;article&gt; - Define um artigo na pagina  </li>
+            <li> &lt;aside&gt; - Define um conteudo separado das sections (uma barra lateral) </li>
+            <li> &lt;footer&gt; - Define o rodapé na pagina </li>
+        </ul>
+        <!-- &lt; = lower than / &gt; = greater than -->
+        <img src="imagem/layout.png" alt="imagem mostrando quadrados contendo o nome das tags que correspondem a cada parte do layout"> 
 
     </main>
 
