--- a/layout.html
+++ b/layout.html
@@ -4,6 +4,7 @@
     <!-- Metadados -->
     <meta charset="UTF-8">
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
+    <link rel="stylesheet" href="CSS/style.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="HTML, Layout, Metadados, Comentarios, listas">
     <meta name="description" content="Criação de layout">
@@ -12,13 +13,13 @@
 </head>
 <body>
     <!-- header -->
-    <header>
+    <header class="flex-container" id="topo">
         <a href="index.html" title="Voltar para a pagina inicial"> <img src="imagem/FATEC_ZONA_LESTE.png" alt="Logo da Fatec Zona Leste nas cores cinza e vermelho"> </a>
     </header>
 
     <!-- nav -->
-    <nav>
-        <ul>
+    <nav class="flex-container">
+        <ul class="menu">
             <li><a href="index.html">Início</a></li>
             <li><a href="comentarios.html">Comentários</a></li>
             <li><a href="metadados.html">Metadados</a></li>
@@ -33,10 +34,10 @@
     </nav>
 
     <!-- main -->
-    <main>
+    <main class="flex-container" id="conteudo">
         <h1> Layout </h1>
         <p> O layout é construido através de elementos semanticos, sendo eles: </p>
-        <ul>
+        <ul class="desc">
             <li> &lt;header&gt; - Define o cabeçalho da pagina </li>
             <li> &lt;nav&gt; - Define o menu de navegação da pagina </li>
             <li> &lt;section&gt; - Define uma seção na pagina </li>
@@ -45,12 +46,12 @@
             <li> &lt;footer&gt; - Define o rodapé na pagina </li>
         </ul>
         <!-- &lt; = lower than / &gt; = greater than -->
-        <img src="imagem/layout.png" alt="imagem mostrando quadrados contendo o nome das tags que correspondem a cada parte do layout"> 
+        <img class="small" src="imagem/layout.png" alt="imagem mostrando quadrados contendo o nome das tags que correspondem a cada parte do layout"> 
 
     </main>
 
     <!-- Footer -->
-    <footer>
+    <footer class="flex-container" id="rodape">
         <p> Reryson Santos de Andrade <br> 
             Todos os direitos Reservados &copy; 2022 
         </p>
