--- a/comentarios.html
+++ b/comentarios.html
@@ -4,6 +4,7 @@
     <!-- Metadados -->
     <meta charset="UTF-8">
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
+    <link rel="stylesheet" href="CSS/style.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="HTML, Layout, Metadados, Comentarios, listas">
     <meta name="description" content="Criação de layout">
@@ -12,13 +13,13 @@
 </head>
 <body>
     <!-- header -->
-    <header>
+    <header class="flex-container" id="topo">
         <a href="index.html" title="Voltar para a pagina inicial"> <img src="imagem/FATEC_ZONA_LESTE.png" alt="Logo da Fatec Zona Leste nas cores cinza e vermelho"> </a>
     </header>
 
     <!-- nav -->
-    <nav>
-        <ul>
+    <nav class="flex-container">
+        <ul class="menu">
             <li><a href="index.html">Início</a></li>
             <li><a href="comentarios.html">Comentários</a></li>
             <li><a href="metadados.html">Metadados</a></li>
@@ -33,14 +34,14 @@
     </nav>
 
     <!-- main -->
-    <main>
+    <main class="flex-container" id="conteudo">
         <h1> Comentarios </h1>
         <p> Comentários em HTML não são exibidos no navegador, mas podem ajudar a documentar seu código-fonte HTML. </p>
-        <img src="imagem/comentarios.png" alt="Imagem demonstrando o uso de comentarios dentro de uma pagina html">
+        <img class="small" src="imagem/comentarios.png" alt="Imagem demonstrando o uso de comentarios dentro de uma pagina html">
     </main>
 
     <!-- Footer -->
-    <footer>
+    <footer class="flex-container" id="rodape">
         <p> Reryson Santos de Andrade <br> 
             Todos os direitos Reservados &copy; 2022 
         </p>
