--- a/comentarios.html
+++ b/comentarios.html
@@ -30,6 +30,7 @@
                 </ul>
             </li>
             <li><a href="layout.html"> Layout </a></li>
+            <li><a href="contato.html"> Contato </a></li>
         </ul>
     </nav>
 
