--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
             <li><a href="comentarios.html">Comentários</a></li>
             <li><a href="metadados.html">Metadados</a></li>
             <li> <a href="javascript:void(0);"> Listas</a>
-                <ul>
+                <ul class="sub">
                     <li><a href="ol.html"> Lista Ordenada </a></li>
                     <li><a href="ul.html"> Lista Não Ordenada </a></li>
                 </ul>
             </li>
             <li><a href="layout.html"> Layout </a></li>
+            <li><a href="contato.html"> Contato </a></li>
         </ul>
     </nav>
 
