--- a/layout.html
+++ b/layout.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <link rel="stylesheet" href="CSS/style.css"/>
+    <link rel="icon" href="imagem/favicon.png" typ="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="HTML, Layout, Metadados, Comentarios, listas">
     <meta name="description" content="Criação de layout">
