--- a/contato.html
+++ b/contato.html
@@ -13,11 +13,39 @@
 </head>
 
 <body>
+    <!-- acessibilidade -->
+    <div class="acessibilidade flex-container">
+        <ul class="atalhos">
+            <li><a href="#conteudo" accesskey="1" title="Ir para a área de conteúdo">Ir para o conteudo[1]</a></li>
+            <li><a href="#menu" accesskey="2" title="Ir para o menu de navegação">Ir para o menu[2] </a></li>
+            <li><a href="#rodape" accesskey="3" title="Ir para o rodapé">Ir para o rodapéS[3] </a></li>
+        </ul>
+        <ul class="links_acess">
+            <li><a href="acessibilidade.html">Acessibilidade</a></li>
+            <li><a href="javascript:void(0);" id="contraste"> Contraste </a></li>
+            <li><a href="javascript:void(0);" id="sem_contraste"> Sem contraste </a></li>
+            <li><a href="javascript:void(0);" id="aumenta"> A+ </a></li>
+            <li><a href="javascript:void(0);" id="diminui"> A- </a></li>
+        </ul>
+    </div>
+
     <!-- header -->
     <header class="flex-container" id="topo">
         <a href="index.html" title="Voltar para a pagina inicial"> <img src="imagem/FATEC_ZONA_LESTE.png" alt="Logo da Fatec Zona Leste nas cores cinza e vermelho" caption="logo da Fatec"> </a>
     </header>
-
+    
+    <!-- vlibras -->
+    <div vw class="enabled">
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+            <div class="vw-plugin-top-wrapper"></div>
+            </div>
+        </div>
+        <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+        <script>
+            new window.VLibras.Widget('https://vlibras.gov.br/app');
+        </script>
+        
     <!-- nav -->
     <nav class="flex-container">
         <ul class="menu">
