--- a/comentarios.html
+++ b/comentarios.html
@@ -48,6 +48,8 @@
         
     <!-- nav -->
     <nav class="flex-container">
+        <label for="bt_menu"><img src="imagem/menu.png" alt="botão de menu"></label>
+        <input type="checkbox" name="bt_menu" id="bt_menu" value="1">
         <ul class="menu">
             <li><a href="index.html">Início</a></li>
             <li><a href="comentarios.html">Comentários</a></li>
@@ -65,9 +67,15 @@
 
     <!-- main -->
     <main class="flex-container" id="conteudo">
-        <h1> Comentarios </h1>
-        <p> Comentários em HTML não são exibidos no navegador, mas podem ajudar a documentar seu código-fonte HTML. </p>
-        <img class="small" src="imagem/comentarios.png" alt="Imagem demonstrando o uso de comentarios dentro de uma pagina html">
+        <ul class="breadcrumb">
+            <li><a href="index.html">Início</a></li>
+            <li>Comentarios</li>
+        </ul>
+        <section>
+            <h1> Comentarios </h1>
+            <p> Comentários em HTML não são exibidos no navegador, mas podem ajudar a documentar seu código-fonte HTML. </p>
+            <img class="small" src="imagem/comentarios.png" alt="Imagem demonstrando o uso de comentarios dentro de uma pagina html">
+        </section>
     </main>
 
     <!-- Footer -->
