--- a/layout.html
+++ b/layout.html
@@ -48,6 +48,8 @@
         
     <!-- nav -->
     <nav class="flex-container">
+        <label for="bt_menu"><img src="imagem/menu.png" alt="botão de menu"></label>
+        <input type="checkbox" name="bt_menu" id="bt_menu" value="1">
         <ul class="menu">
             <li><a href="index.html">Início</a></li>
             <li><a href="comentarios.html">Comentários</a></li>
@@ -65,18 +67,24 @@
 
     <!-- main -->
     <main class="flex-container" id="conteudo">
-        <h1> Layout </h1>
-        <p> O layout é construido através de elementos semanticos, sendo eles: </p>
-        <ul class="desc">
-            <li> &lt;header&gt; - Define o cabeçalho da pagina </li>
-            <li> &lt;nav&gt; - Define o menu de navegação da pagina </li>
-            <li> &lt;section&gt; - Define uma seção na pagina </li>
-            <li> &lt;article&gt; - Define um artigo na pagina  </li>
-            <li> &lt;aside&gt; - Define um conteudo separado das sections (uma barra lateral) </li>
-            <li> &lt;footer&gt; - Define o rodapé na pagina </li>
+        <ul class="breadcrumb">
+            <li><a href="index.html">Início</a></li>
+            <li>Layout</li>
         </ul>
-        <!-- &lt; = lower than / &gt; = greater than -->
-        <img class="small" src="imagem/layout.png" alt="imagem mostrando quadrados contendo o nome das tags que correspondem a cada parte do layout"> 
+        <section>
+            <h1> Layout </h1>
+            <p> O layout é construido através de elementos semanticos, sendo eles: </p>
+            <ul class="desc">
+                <li> &lt;header&gt; - Define o cabeçalho da pagina </li>
+                <li> &lt;nav&gt; - Define o menu de navegação da pagina </li>
+                <li> &lt;section&gt; - Define uma seção na pagina </li>
+                <li> &lt;article&gt; - Define um artigo na pagina  </li>
+                <li> &lt;aside&gt; - Define um conteudo separado das sections (uma barra lateral) </li>
+                <li> &lt;footer&gt; - Define o rodapé na pagina </li>
+            </ul>
+            <!-- &lt; = lower than / &gt; = greater than -->
+            <img class="small" src="imagem/layout.png" alt="imagem mostrando quadrados contendo o nome das tags que correspondem a cada parte do layout"> 
+        </section>
 
     </main>
 
