--- a/metadados.html
+++ b/metadados.html
@@ -48,6 +48,8 @@
         
     <!-- nav -->    
     <nav class="flex-container">
+        <label for="bt_menu"><img src="imagem/menu.png" alt="botão de menu"></label>
+        <input type="checkbox" name="bt_menu" id="bt_menu" value="1">
         <ul class="menu">
             <li><a href="index.html">Início</a></li>
             <li><a href="comentarios.html">Comentários</a></li>
@@ -65,11 +67,17 @@
 
     <!-- main -->
     <main class="flex-container" id="conteudo">
-        <h1> Metadados </h1>
-        <p> Metadados são dados externos à página que são usados ​​pelos navegadores (como exibir conteúdo), pelos mecanismos de pesquisa (palavras-chave) e outros serviços da web. </p>
-        <p> Eles são integrados à página HTML pela tag &lt;meta&gt;</p> 
-        <!-- &lt; = lower than / &gt; = greater than -->
-        <img class="big" src="imagem/metadados.png" alt="imagem demonstrando o uso de tags de metadados, sendo elas: Charset, description, keywords e author"> 
+        <ul class="breadcrumb">
+            <li><a href="index.html">Início</a></li>
+            <li>Metadados</li>
+        </ul>
+        <section>
+            <h1> Metadados </h1>
+            <p> Metadados são dados externos à página que são usados ​​pelos navegadores (como exibir conteúdo), pelos mecanismos de pesquisa (palavras-chave) e outros serviços da web. </p>
+            <p> Eles são integrados à página HTML pela tag &lt;meta&gt;</p> 
+            <!-- &lt; = lower than / &gt; = greater than -->
+            <img class="big" src="imagem/metadados.png" alt="imagem demonstrando o uso de tags de metadados, sendo elas: Charset, description, keywords e author"> 
+        </section>
 
     </main>
 
