--- a/index.html
+++ b/index.html
@@ -92,8 +92,6 @@
         <p> Todos os direitos Reservados &copy; 2022 </p>
     </footer>
 
-    <script type="text/javascript"> 
-        
-    </script>
+    <script type="text/javascript"></script>
 </body>
 </html>
