--- a/ul.html
+++ b/ul.html
@@ -48,6 +48,8 @@
         
     <!-- nav -->
     <nav class="flex-container">
+        <label for="bt_menu"><img src="imagem/menu.png" alt="botão de menu"></label>
+        <input type="checkbox" name="bt_menu" id="bt_menu" value="1">
         <ul class="menu">
             <li><a href="index.html">Início</a></li>
             <li><a href="comentarios.html">Comentários</a></li>
@@ -65,10 +67,17 @@
 
     <!-- main -->
     <main class="flex-container" id="conteudo">
-        <h1> Lista Não Ordenada </h1>
-        <p> Uma lista não ordenada começa com a tag &lt;ul&gt; Cada item da lista começa com a tag &lt;li&gt; </p>
-        <p> Os itens da lista serão marcados com marcadores (pequenos círculos pretos) por padrão: </p> 
-        <img class="small" src="imagem/ul.png" alt="imagem mostrando como criar uma lista não ordenada com as tags 'ul' e 'li'"> 
+        <ul class="breadcrumb">
+            <li><a href="index.html">Início</a></li>
+            <li><a href="javascript:void(0);">Listas</a></li>
+            <li>lista não ordenada</li>
+        </ul>
+        <section>
+            <h1> Lista Não Ordenada </h1>
+            <p> Uma lista não ordenada começa com a tag &lt;ul&gt; Cada item da lista começa com a tag &lt;li&gt; </p>
+            <p> Os itens da lista serão marcados com marcadores (pequenos círculos pretos) por padrão: </p> 
+            <img class="small" src="imagem/ul.png" alt="imagem mostrando como criar uma lista não ordenada com as tags 'ul' e 'li'"> 
+        </section>
 
     </main>
 
