--- a/contato.html
+++ b/contato.html
@@ -9,6 +9,9 @@
     <meta name="keywords" content="HTML, Layout, Metadados, Comentarios, listas">
     <meta name="description" content="Criação de layout">
     <!-- fim metadados -->
+     <!-- bibliotecas/plugins-->
+     <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js" integrity="sha512-pHVGpX7F/27yZ0ISY+VVjyULApbDlD0/X0rgGbTqCE7WFW5MezNTWG/dnhtbBuICzsd0WQPgpE4REBLv+UqChw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <title> Aulas Desenvolvimento Web 1</title>
 </head>
 
@@ -160,4 +163,6 @@
         <br>
     </footer>
 </body>
+<script src="js/contraste.js"></script>
+<script src="js/mask.js"></script>
 </html>
