--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="HTML, Layout, Metadados, Comentarios, listas">
     <meta name="description" content="Criação de layout">
-    <!-- fim metadados -->
+   
     <title> Aulas Desenvolvimento Web 1</title>
     <style>
 
@@ -90,8 +90,10 @@
     <footer class="flex-container" id="rodape">
         <p> Reryson Santos de Andrade </p>
         <p> Todos os direitos Reservados &copy; 2022 </p>
+        <br>
     </footer>
 
-    <script type="text/javascript"></script>
+    
 </body>
+<script src="js/contraste.js"></script>
 </html>
