--- a/contato.html
+++ b/contato.html
@@ -101,22 +101,22 @@
                     <input type="text" name="txt_cep" id="cep" placeholder="00000-000" required> <br>
                     <!---->
                     <label for="rua"> Rua </label> <br>
-                    <input type="text" name="txt_rua" id="rua"> <br>
+                    <input type="text" name="txt_rua" id="rua" disabled> <br>
                     <!---->
                     <label for="numero" class="required"> Numero </label> <br>
-                    <input type="number" name="txt_numero" id="numero" required> <br>
+                    <input type="number" name="txt_numero" id="numero"> <br>
                     <!---->
                     <label for="complemento"> Complemento </label> <br>
-                    <input type="text" name="txt_complemento" id="complemento" placeholder="Casa/Loja"> <br>
+                    <input type="text" name="txt_complemento" id="complemento" placeholder="Casa/Loja" disabled> <br>
                     <!---->
                     <label for="bairro" class="required"> Bairro </label> <br>
-                    <input type="text" name="txt_bairro" id="bairro" required> <br>
+                    <input type="text" name="txt_bairro" id="bairro" disabled> <br>
                     <!---->
                     <label for="cidade" class="required"> Cidade </label>  <br>
-                    <input type="text" name="txt" id="cidade" required> <br>
+                    <input type="text" name="txt" id="cidade" disabled> <br>
                     <!---->
-                    <label for="estado" class="required"> Estado  </label> <br>
-                    <input type="text" name="txt_estado" id="estado" required> <br>
+                    <label for="uf" class="required"> UF  </label> <br>
+                    <input type="text" name="txt_estado" id="uf" disabled> <br>
                     <!---->
                     
                 </fieldset>
@@ -165,4 +165,5 @@
 </body>
 <script src="js/contraste.js"></script>
 <script src="js/mask.js"></script>
+<script src="js/cep.js"></script>
 </html>
